# aws-sqs-persist

./: .gitignore  CMakeLists.txt  README.md  dynamodb.h  main.cc  sqs.h
